--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portal de notícias</title>
+
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="page">
-    <img src="" alt="">
+    <img src="assets/main-image.jpg" alt="imagem de um Cupcake de café com chantilly">
     <section class="about">
       <h1>Cupcake de café com chantilly</h1>
       <p>O bolinho perfeito para acompanhar o café de todos os dias. É muito fácil e ainda por cima fica maravilhoso, com certeza vai impressionar. Faz e depois me conta o que achou!</p>
