--- a/index.html
+++ b/index.html
@@ -49,5 +49,9 @@
      </section>
    </main>
   </div>
+
+  <footer>
+    Feito com <img src="assets/Vector.svg" alt="imagem de um coraçãozinho"> pela Rocketseat
+  </footer>
 </body>
 </html>
